--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,139 @@
-body {background-color: aqua;}
-
-.box1 {
-    background-color: lightcoral;
-    display: flex;
-    flex-wrap: wrap;
+body{
+    background-color: rgb(11, 108, 153);
+    margin: 0;
+    padding: 0;
+    
 }
 
-.box1>div{
-border: 3px solid purple;  
+.hero-image{
+
+background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), url("../images/UseR-24-Event-LaunchAssets-v2_subhero-2400x750-A.png"); 
+height: 300px;
+background-position: center;
+background-size: cover;
+
+opacity: 0;
+    animation: fadein .5s;
+    animation-fill-mode: both;
 }
-.box1>div>img{
+
+.hero-image .hero-tint{
     width: 100%;
-    height: 500px;
-}
-
-.box2{
-    background-color: beige;
-    border: 4px solid red;
-    padding-left: 6%;
-    padding-top: 1%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    
 }
 
-.box2>div{
-    background-color: lawngreen;
-    border: 2px solid royalblue;
-    width: 46%;
+.hero-image .hero-content{
+background: radial-gradient(circle, #f3e305 0%, #09e4e4 100%);
+  
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: animatedGradient 2s infinite ease;
+  animation-direction: alternate;
+    font-size: xx-large;
+    
+}
+
+.hero-image .hero-content {
+    margin-left: calc(40px + 4vw);
+    margin-bottom: calc(40px + 3vw);
+    justify-content: left;
+    display: grid;
+}
+
+.hero-image .hero-button{
+    
+    border-radius: 5px;
+    padding: 
+    calc(10px + 0.15vw)
+    calc(15px + 0.15vw);
+    background: rgba(0, 100, 200, 0.8);
+    color: rgb(241, 200, 15);
+    font-size: calc(8px + 1vw);
+    text-decoration: none;
+    
+    position: relative;
+    width: 11%;
+   
+    
+}
+.hero-image .hero-button:hover{
+    background: rgba(180, 174, 174, 0.3);
+    color: rgb(253, 210, 18);
+    }
+.container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 285px);
+    place-items: center;
+    gap: 20px;
+    padding-left: 5%;
+    opacity: 0;
+    animation: fadein 1s;
+    animation-fill-mode: both;
+}
+.gallery-img{
+    margin-top: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    
+
+    
+}
+
+
+.section-text{
+    color: gold;
+    text-align: center;
+    font-size: 3rem;
+    margin: 0;
+    padding: 1%;
+    text-shadow: rgb(13, 144, 161) 1px 1px;
+    
+    animation: fadein 1.5s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+  ul {
+    display: grid;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    grid-template-columns: 100px 100px 115px 100px;
+    grid-template-rows: auto;
+    justify-content: center;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    
+    width: 100%;
+  }
+  
+  li {
     float: left;
-}
-.box3{
-    background-color: lightgray;
-    border: 4px solid darkolivegreen;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+  
